--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ body {
 }
 
 .buttons button {
-	border: 1px solid white;
+	border: 2px solid white;
+	border-radius: 1rem;
 	background: black;
 	color: white;
 	font-size: 1.5rem;
